Stencil example working on CPU

--- a/2024-nov-21_julia_webinar/Webinar_Julia.ipynb
+++ b/2024-nov-21_julia_webinar/Webinar_Julia.ipynb
@@ -559,19 +559,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d45ab35e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Manifest.toml`\n",
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Manifest.toml`\n",
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Manifest.toml`\n",
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Manifest.toml`\n"
+     ]
+    }
+   ],
    "source": [
     "# Some preliminary imports\n",
     "using Pkg\n",
     "Pkg.add(\"Plots\")\n",
     "Pkg.add(\"BenchmarkTools\")\n",
     "Pkg.add(\"KernelAbstractions\")\n",
+    "Pkg.add(\"ProgressMeter\")\n",
     "using Plots\n",
     "using BenchmarkTools\n",
-    "using KernelAbstractions"
+    "using KernelAbstractions\n",
+    "using ProgressMeter"
    ]
   },
   {
@@ -718,8 +739,142 @@
     "\n",
     "<div>\n",
     "<img src=\"https://enccs.github.io/gpu-programming/_images/stencil.svg\" width=\"800\">\n",
-    "<p>Regular 2D grid where the heat equation is solved. The indices `(i,j)` indicate the spacial coordinates of the gridpoints, whereas the superscript `m` indicates the timestep.</p>\n",
-    "</div>"
+    "<p>Regular 2D grid where the heat equation is solved. The indices (i,j) indicate the spacial coordinates of the gridpoints, whereas the superscript m indicates the timestep.</p>\n",
+    "</div>\n",
+    "\n",
+    "Let us define preliminary variables containing the problem size, timestep and initial conditions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c949c18d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dx = dy = 0.1\n",
+    "N = 64\n",
+    "nsteps = 500\n",
+    "α = 10 # Diffusion coefficient\n",
+    "dt = dx^2 * dy^2 / (2.0 * α * (dx^2 + dy^2)) # Largest stable time step\n",
+    "T_disk = 200 # Temperature of the hot disk\n",
+    "T_domain = 50\n",
+    "\n",
+    "# Now to generate the initial condition: a hot disk in the middle of the domain, colder everywhere else\n",
+    "\n",
+    "T = zeros(N+2,N+2) .+ T_domain # Initial condition everywhere\n",
+    "# Now we can add our hot disk\n",
+    "r²= (N/6)^2\n",
+    "for i = 1:N+2\n",
+    "    for j = 1:N+2\n",
+    "        ds² = (i - N/2)^2 + (j - N/2)^2\n",
+    "        if ds² < r²\n",
+    "            T[i,j] = T_disk\n",
+    "        end\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "T_prev = copy(T); # We will need the old timestep to do time marching\n",
+    "println(dx)\n",
+    "dy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e91e1067",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "evolve! (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Now the real work horse: the diffusion kernel\n",
+    "\n",
+    "@kernel function diffusion!(T, T_prev, dx, dy, α, dt, N)\n",
+    "    i,j = @index(Global, NTuple)\n",
+    "    if i > 1 && j > 1 && i < N+2 && j < N+2\n",
+    "        @inbounds begin\n",
+    "            ddx = (T_prev[i-1,j] - 2.0 * T_prev[i,j] + T_prev[i+1,j]) / (dx*dx)\n",
+    "            ddy = (T_prev[i,j-1] - 2.0* T_prev[i,j] + T_prev[i, j+1]) / (dy*dy)\n",
+    "            T[i,j] = T_prev[i,j] + α * dt * (ddx + ddy)\n",
+    "        end\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "function evolve!(T, T_prev, dx, dy, α, dt, N)\n",
+    "    backend = get_backend(T)\n",
+    "    kernel! = diffusion!(backend)\n",
+    "    kernel!(T, T_prev, dx, dy, α, dt, N, ndrange=(N,N))\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4d8bf2da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "visualise (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Let's just write a small visualisation pipeline\n",
+    "function visualise(T)\n",
+    "    background_colour = :white\n",
+    "    heatmap!(T, colorbar_title=\"Temperature\", background_color=background_colour)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec2fe840",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's run this on CPU\n",
+    "p = Progress(nsteps)\n",
+    "plot = display(heatmap!(T, colorbar_title=\"Temperature\"))\n",
+    "@gif for i=1:nsteps\n",
+    "    evolve!(T, T_prev, dx, dy, α, dt, N)\n",
+    "    heatmap!(plot, T)\n",
+    "    tmp = T\n",
+    "    T = T_prev\n",
+    "    T_prev = tmp # Swap T and T_prev\n",
+    "    next!(p)\n",
+    "end"
    ]
   },
   {
