Stencil example working on GPU

--- a/2024-nov-21_julia_webinar/Webinar_Julia.ipynb
+++ b/2024-nov-21_julia_webinar/Webinar_Julia.ipynb
@@ -559,29 +559,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d45ab35e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Manifest.toml`\n",
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Manifest.toml`\n",
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Manifest.toml`\n",
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.11/Manifest.toml`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Some preliminary imports\n",
     "using Pkg\n",
@@ -747,27 +728,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c949c18d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dx = dy = 0.1\n",
     "N = 64\n",
@@ -791,29 +755,19 @@
     "    end\n",
     "end\n",
     "\n",
-    "T_prev = copy(T); # We will need the old timestep to do time marching\n",
-    "println(dx)\n",
-    "dy"
+    "T_prev = copy(T); # We will need the old timestep to do time marching"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e91e1067",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "evolve! (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Now the real work horse: the diffusion kernel\n",
+    "\n",
+    "using KernelAbstractions\n",
     "\n",
     "@kernel function diffusion!(T, T_prev, dx, dy, α, dt, N)\n",
     "    i,j = @index(Global, NTuple)\n",
@@ -830,31 +784,8 @@
     "    backend = get_backend(T)\n",
     "    kernel! = diffusion!(backend)\n",
     "    kernel!(T, T_prev, dx, dy, α, dt, N, ndrange=(N,N))\n",
+    "    KernelAbstractions.synchronize(backend)\n",
     "end\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "4d8bf2da",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "visualise (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Let's just write a small visualisation pipeline\n",
-    "function visualise(T)\n",
-    "    background_colour = :white\n",
-    "    heatmap!(T, colorbar_title=\"Temperature\", background_color=background_colour)\n",
-    "end"
    ]
   },
   {
@@ -865,16 +796,52 @@
    "outputs": [],
    "source": [
     "# Let's run this on CPU\n",
-    "p = Progress(nsteps)\n",
-    "plot = display(heatmap!(T, colorbar_title=\"Temperature\"))\n",
-    "@gif for i=1:nsteps\n",
+    "#p = Progress(nsteps)\n",
+    "display(heatmap(T, colorbar_title=\"Temperature\"))\n",
+    "for i=1:nsteps\n",
     "    evolve!(T, T_prev, dx, dy, α, dt, N)\n",
-    "    heatmap!(plot, T)\n",
     "    tmp = T\n",
     "    T = T_prev\n",
     "    T_prev = tmp # Swap T and T_prev\n",
-    "    next!(p)\n",
-    "end"
+    "    #next!(p)\n",
+    "end\n",
+    "display(heatmap(T))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5eed3721",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now let's do the same thing on GPU\n",
+    "T = zeros(N+2,N+2) .+ T_domain # Initial condition everywhere\n",
+    "# Now we can add our hot disk\n",
+    "r²= (N/6)^2\n",
+    "for i = 1:N+2\n",
+    "    for j = 1:N+2\n",
+    "        ds² = (i - N/2)^2 + (j - N/2)^2\n",
+    "        if ds² < r²\n",
+    "            T[i,j] = T_disk\n",
+    "        end\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "T_prev = copy(T); # We will need the old timestep to do time marching\n",
+    "\n",
+    "T_d = ROCArray(T);\n",
+    "T_prev_d = ROCArray(T_prev);\n",
+    "display(heatmap(T, colorbar_title=\"Temperature\"))\n",
+    "for i=1:nsteps\n",
+    "    evolve!(T_d, T_prev_d, dx, dy, α, dt, N)\n",
+    "    #heatmap!(T)\n",
+    "    tmp_d = T_d;\n",
+    "    T_d = T_prev_d;\n",
+    "    T_prev_d = tmp_d; # Swap T and T_prev\n",
+    "    #next!(p)\n",
+    "end\n",
+    "display(heatmap(Array(T_d)))\n"
    ]
   },
   {
